<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUp_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signupbg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to TravelMania"
        android:textSize="20sp"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textColor="@color/Dark_Blue"
        android:layout_marginVertical="10dp"
        />
    <ScrollView
        android:id="@+id/signUp_scrollView"
        android:layout_marginTop="50dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#66FFFFFF">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/txt_name"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                app:startIconTint="@color/Secondary_dark_blue"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_input"
                    android:layout_width="match_parent"
                    android:autofillHints="name"
                    android:importantForAutofill="no"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/txt_email"
                app:startIconDrawable="@drawable/ic_baseline_email_24"
                app:startIconTint="@color/Secondary_dark_blue"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/txt_mobile"
                app:startIconDrawable="@drawable/ic_baseline_phone_iphone_24"
                app:startIconTint="@color/Secondary_dark_blue"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/number_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:autofillHints="phone"
                    android:inputType="phone"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/password"
                app:passwordToggleTint="@color/Secondary_dark_blue"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_security_24"
                app:startIconTint="@color/Secondary_dark_blue"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_pwd_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/txt_confirm_password"
                app:passwordToggleTint="@color/Secondary_dark_blue"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_security_24"
                app:startIconTint="@color/Secondary_dark_blue"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_pwd_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUp_scrollView"
        android:layout_marginVertical="25dp"
        android:layout_marginTop="24dp"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_btn"
        android:text="@string/txt_sign_up"
        android:textColor="@color/white" />

</RelativeLayout>